--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Nombre. </title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>yuldor cipamocha. </el mejor turismo>
+		<turismo="utf-8" />
+		<turismo="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -22,11 +22,11 @@
 			<div id="main">
 					<section id="one">
 						<header class="major">
-							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - Título.</h2>
+							<!-- Tu perfil - el mejor turismo -->
+							<h2>Tu perfil - el mejor turismo.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<p>en mi experiencia como mesero he determinado que pueden mejorarse varias maneras para poder mejorar el turismo sostenible.</p>
 						<ul class="actions">
 							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
@@ -43,7 +43,7 @@
 								<!-- Tu portafolio - Su imagen -->	
 									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
-								<h3>Formo parte de la CUN.</h3>
+								<h3>Formo parte de la universidad CUN estudiando administracion hotelera.</h3>
 								<!-- Tu portafolio - Descripción -->	
 								<p>La comunidad profesional web más reconocida del mundo.</p>
 							</article>
@@ -51,7 +51,7 @@
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
 								<h3>Escribo en Medium.</h3>
-								<p>Escribo tácticas sobre cómo mejorar el marketing de tu empresa.</p>
+								<p>Escribo tecnicas para la implementacion del turismo sostenible.</p>
 							</article>
 						</div>
 					</section>
