--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<ul class="icons">
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
-					<li><a href="https://www.facebook.com/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/yuldor.sneyder" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://growthhackers.com/members/" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
 					<li><a href="mailto:tuemail" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
