--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
 					<li><a href="https://www.facebook.com/yuldor.sneyder" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="https://growthhackers.com/members/" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
+					<li><a href="https://www.linkedin.com/in/yuldor-cipamocha-427bb6151/" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
 					<li><a href="mailto:tuemail" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				
