--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
 					<li><a href="https://www.facebook.com/yuldor.sneyder" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.linkedin.com/in/yuldor-cipamocha-427bb6151/" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
-					<li><a href="mailto:tuemail" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="https://www.instagram.com/yuldorcipamocha/" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				
 		<!-- El área final -->				
