--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>yuldor cipamocha. </el mejor turismo>
+		<title>yuldor cipamocha. </title>
 		<turismo="utf-8" />
 		<turismo="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
