--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div id="main">
 					<section id="one">
 						<header class="major">
-							<!-- Tu perfil - el mejor turismo -->
+							<!-- sneyder- el mejor turismo -->
 							<h2>Tu perfil - el mejor turismo.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
