--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- sneyder- el mejor turismo -->
-							<h2>Tu perfil - el mejor turismo.</h2>
+							<h2>sneyder - el mejor turismo.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>en mi experiencia como mesero he determinado que pueden mejorarse varias maneras para poder mejorar el turismo sostenible.</p>
