--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>yuldor sneyder</strong>, tu perfil.<br />
+				<h1><strong>yuldor sneyder</strong>,barman.<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- sneyder- el mejor turismo -->
-							<h2>sneyder - el mejor turismo.</h2>
+							<h2>sneyder- el mejor turismo.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>en mi experiencia como mesero he determinado que pueden mejorarse varias maneras para poder mejorar el turismo sostenible.</p>
