--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>yuldor cipamocha. </title>
+		<title>Yuldor Cipamocha. </title>
 		<turismo="utf-8" />
 		<turismo="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
+				<a href="#" class="image avatar"><img src="11742734_421864691339159_459154593371593992_n" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>yuldor sneyder</strong>,barman.<br />
 			</header>
