--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="images/11742734_421864691339159_459154593371593992_n.jgp" alt="" /></a>
+				<a href="#" class="image avatar"><img src="images/11742734_421864691339159_459154593371593992_n.jpg" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>yuldor sneyder</strong>,barman.<br />
 			</header>
