--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
-								<h3>Escribo en Medium.</h3>
+								<h3>para ser el mejor bartender.</h3>
 								<p>Escribo tecnicas para la implementacion del turismo sostenible.</p>
 							</article>
 						</div>
