--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<!-- Tu perfil - Descripción -->
 						<p>en mi experiencia como mesero he determinado que pueden mejorarse varias maneras para poder mejorar el turismo sostenible.</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.linkedin.com/in/yuldor-cipamocha-427bb6151" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
 					</section>
 
