--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
 								<a href="http://platzi.com" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
-									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
+									<img src="http://bartender-eventos-bar-movil-cocteleria-shows-bogota-colombia_4jpg"/></a>
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la universidad CUN estudiando administracion hotelera.</h3>
 								<!-- Tu portafolio - Descripción -->	
@@ -49,7 +49,7 @@
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
+								<a href="http://www.cocteleria.com.mx/blog/bartender/155-tecnicas-basicas-de-un-bartender" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
 								<h3>para ser el mejor bartender.</h3>
 								<p>Escribo tecnicas para la implementacion del turismo sostenible.</p>
 							</article>
