--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							
 							<article class="6u 12u$(xsmall) work-item">
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
-								<a href="http://platzi.com" target="_blank" class="image fit thumb">
+								<a href="https://es.wikipedia.org/wiki/Barman">
 								<!-- Tu portafolio - Su imagen -->	
 									<img src="http://bartender-eventos-bar-movil-cocteleria-shows-bogota-colombia_4jpg"/></a>
 								<!-- Tu portafolio - Título -->	
